E6STORY 6.1: API Security   TASK 6.1.1 – Secure endpoints with JWT   TASK 6.1.2 – Implement role-based access (USER, ADMIN)   TASK 6.1.3 – Protect public APIs from abuse (rate limit – basic)